leptos_macro/tests/ui/component_absolute.stderr
error: supported fields are `optional`, `optional_no_strip`, `strip_option`, `default`, `into`, `attrs` and `name`
 --> tests/ui/component_absolute.rs:5:31
  |
5 | fn unknown_prop_option(#[prop(hello)] test: bool) -> impl ::leptos::IntoView {
  |                               ^^^^^

error: `optional` conflicts with mutually exclusive `optional_no_strip`
  --> tests/ui/component_absolute.rs:11:12
   |
11 |     #[prop(optional, optional_no_strip)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `optional` conflicts with mutually exclusive `strip_option`
  --> tests/ui/component_absolute.rs:18:12
   |
18 |     #[prop(optional, strip_option)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^

error: `optional_no_strip` conflicts with mutually exclusive `strip_option`
  --> tests/ui/component_absolute.rs:25:12
   |
25 |     #[prop(optional_no_strip, strip_option)] conflicting: bool,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected `=` or `(`

       = help: try `#[prop(default = 5 * 10)]`
  --> tests/ui/component_absolute.rs:30:1
   |
30 | #[::leptos::component]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `::leptos::component` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`

       = help: try `#[prop(default = 5 * 10)]`
  --> tests/ui/component_absolute.rs:37:1
   |
37 | #[::leptos::component]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `::leptos::component` (in Nightly builds, run with -Z macro-backtrace for more info)
